# SmartClip

./: .gitignore  CMakeLists.txt  make_release.bat  plan.md  smartclip_full_brief.md
.claude/: settings.local.json
assets/: app.rc  resources.qrc  theme.qss
installer/: CMakeLists.txt  installer.manifest  installer.rc  main.cpp
src/: main.cpp
src/core/: AppSettings.h  BugReporter.cpp  BugReporter.h  ClipboardManager.cpp  ClipboardManager.h  Database.cpp  Database.h  HotkeyManager.cpp  HotkeyManager.h  UpdateChecker.cpp  UpdateChecker.h  Version.h  VideoWatcher.cpp  VideoWatcher.h  Watchdog.cpp  Watchdog.h
src/platform/: DCompBlur.cpp  DCompBlur.h
src/ui/: ClickableCard.h  HotkeyEdit.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  SmartButton.h
translations/: smartclip_de.ts  smartclip_en.ts  smartclip_ua.ts
